NEW

- /joingame accepts optional nickname argument
- implement Amrita's checker for sliding into those DMs
- /blame tag whoever is relevant, not just elections (make /blame actually good)
- /blame should be a valid command for spectators
- rate-limit /blame
- reiterate all stats when a policy is played
- warn a Fascist if they are about to kill Hitler
- disallow single digit names + more name restrictions like "me too thanks"
- Have the bot message killed players to break the news
- Fixed issue where bot can have unexpected behavior during network outages
- track and annotate CNH
- spectator mode where one gets role info
- keep a string representing the history of tickets and policies, accessible via command
- /vore meme response
- notify players of seating order
- add reshuffle to logs
- send out /blazeit at 4:20
- have log alias to logs
- allow dead people to spectate without leaving
- HitlerZone reminder
- clarified spectator messages
- avoid double-reveal when game ends and a new one is started

UNTESTED

- allow multiple simultaneous games in different chats

IN PROGRESS

COMING SOON (MAYBE)

- put numbers in the logs because players' names may have changed
- implement an official claim system so pres/chancy can log claims
- send snarky messages to those who try to leave before joining
- cursed content 1% of the time
- secrethitler.io-style game rebalancing (especially for 6p)
- let admins change other people's names
- allow arguments to creategame to disallow certain numbers of players
- auto-ja, auto-nein, auto-ja-until-HZ, auto-nein-until-HZ, auto-cancel