@@ -88,7 +88,9 @@ def parse_message(msg):
         args = " ".join(args)
     return command, args
 
-COMMAND_ALIASES = {"nom": "nominate", "blam": "blame", "dig": "investigate", "log": "logs"}
+COMMAND_ALIASES = { "nom": "nominate", "blam": "blame", "dig": "investigate",
+    "log": "logs", "slurp": "spectate", "spy": "spectate",
+    "unslurp": "unspectate", "unspy": "unspectate" }
 def game_command_handler(bot, update, chat_data, user_data):
     """
     Pass all commands that Secret_Hitler.Game can handle to game's handle_message method
